kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-actix-server
  namespace: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-actix-server
      version: 0.0.1
  template:
    metadata:
      labels:
        app: sample-actix-server
        version: 0.0.1
    spec:
      containers:
      - name: sample-actix-server
        image: docker.io/jsenon/sample-actix-server
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
