kubernetes/deployment_tac.yaml
apiVersion: v1
kind: Service
metadata:
  name: mytac
  namespace: test
  labels:
    app: mytac
spec:
  selector:
    app: mytac
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mytac
  namespace: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mytac
      version: 0.0.1
  template:
    metadata:
      labels:
        app: mytac
        version: 0.0.1
    spec:
      containers:
      - name: mytac
        image: docker.io/jsenon/sample-actix-server
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
      - image: jaegertracing/jaeger-agent
        name: jaeger-agent
        ports:
        - containerPort: 5775
          protocol: UDP
        - containerPort: 6831
          protocol: UDP
        - containerPort: 6832
          protocol: UDP
        - containerPort: 5778
          protocol: TCP
        args: ["--collector.host-port=jaeger-collector.istio-system.svc:14267"]
---
